--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,6 @@ body{
   font-family: 'sail';
   padding-right: 10px;
   padding-bottom: 32px;
-  margin: 0;
 }
 .RAheader{
   position: relative;
@@ -46,13 +45,25 @@ body{
 .active{
   background-color: #4a0a1a;
 }
+.RAtekst{
+  margin-top: 20px;
+  padding-bottom: 40px;
+}
+.RAtekst img{
+  float: left;
+}
 .RAfooter{
   color: #e6cd62;
   background-color: #1b1d1e;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  text-align: right;
 }
-.RAtekst{
-  margin-top: 20px;
+.RAfooter p{
+  font-family:'Yantramanav', sans-serif;
 }
-.RAtekst img{
+.RAfooter img{
   float: left;
 }
